# rust_shorten

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: app_state.rs  main.rs
src/api/: error_response.rs  generic_response.rs  health.rs  mod.rs  responses.rs  url.rs
